# ServerManager

./: .breakpoints  .env  .replit  eval.py  main.py  pyproject.toml  replit.nix  requirements.txt  run.sh  url.py  util.py
images/: coastline.geojson  ne_10m_coastline1.geojson
json/: config.json  help.json  id.json  model.json
modules/: antispam.py  auth.py  auto.py  command.py  earthquake.py  gpt.py  monitoring.py  owners.py  tasks.py  tsunami.py
