[tool.poetry]
name = "repl_python3_beta_replit"
version = "0.1.0"
description = ""
authors = ["nox31monss001 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
replit = "^3.2.4"
Flask = "^2.0.3"
aiohttp = "^3.8.1"
moon-tools = "^1.0.0"
wavelink = "^1.3.4"
humanfriendly = "^10.0"
TagScriptEngine = "^2.3.0"
akinator = "^1.0.3"
timedelta = "^2020.12.3"
requests = "^2.28.2"
aioschedule = "^0.5.2"
googletrans = "^3.0.0"
lavalink = "^4.0.6"
teapot = "^2.5"
pillow = "^10.2.0"
webserver = "^0.10.3"
gardenlinux = "^1.1735.0"
nextcord = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
